# utils4plans

./: README.md  justfile  pyproject.toml
src/utils4plans/: geom.py  geom_io.py  io.py  lists.py  sets.py
tests/: test_tricky.py
